Chosen filters save in the preferences but downloading incorrectly